# flat-b-compiler

./: .gitignore  CMakeLists.txt  README.md  benchmark.out  benchmark.sh  compiler-design.md
ll-out/: 99-bottles  bubblesort  fibonnacci  matmul_125  matmul_250  matmul_5  reversal
ll-src/: 99-bottles.ll  99-bottles.s  bubblesort.ll  bubblesort.s  fibonnacci.ll  fibonnacci.s  matmul_125.ll  matmul_125.s  matmul_250.ll  matmul_250.s  matmul_5.ll  matmul_5.s  reversal.ll  reversal.s
scripts/: run-compiler-tests.sh  run-tests.sh
src/: CMakeLists.txt  Makefile  ast.cpp  ast.h  bcc  bci  compiler.cpp  compiler.h  dtype.h  evaluator.h  formatter.cpp  formatter.h  interpreter.cpp  interpreter.h  iparser.y  lexer.l  main.cpp  parser.y  printer.cpp  printer.h  scanner.l  types.h  visitor.cpp  visitor.h
test-units/: 99-bottles.b  arithmetic.b  assign.b  for.b  simple-if-else.b  simple.b  small.b  sumN-dup.b
test-units/correct/: boolean.b  calc.b  crude-fact.b  decl.b  empty-label.b  empty-statement.b  fact.b  fizzbuzz.b  for-test.b  reversal.b  static-assignment.b  while-test.b
test-units/custom/: reversal.b
test-units/error/: declaration.b
test-units/non-trivial/: bubblesort.b  fibonnacci.b  matmul_125.b  matmul_250.b  matrix_multiplication.b  reversal.b
test-units/simple/: arithmetic.b  else.b  for.b  if-else.b  mult3.b  simple-for.b  simple-read.b  sumN-goto.b  sumN.b
